syntax = "proto3";

option csharp_namespace = "gRpc";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayGoobye(GoodbyeRequest) returns (GoodbyeReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GoodbyeRequest {
    string greeting = 1;
    string name = 2;
}

message GoodbyeReply {
    string message = 1;
}